BREAKING CHANGE: Renamed HorizontalTextAlign and VerticalTextAlign Replace with HorizontalAlignment and VerticalAlignment.
Added OxyPlot.sln solution including all projects (makes refactoring easier).
Updated OutputPath and IntermediateOutputPath in the project files to allow
parallel build.

--- a/Source/Examples/ExampleLibrary/ExampleLibraryMA.csproj
+++ b/Source/Examples/ExampleLibrary/ExampleLibraryMA.csproj
@@ -21,7 +21,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>bin\Debug\MfA\</OutputPath>
+    <IntermediateOutputPath>obj\Debug\MfA\</IntermediateOutputPath>
     <DefineConstants>TRACE;DEBUG;MONO</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -29,7 +30,8 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>bin\Release\MfA\</OutputPath>
+    <IntermediateOutputPath>obj\Release\MfA\</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
