--- a/Source/Examples/Silverlight/ExportDemo/ExportDemo_SL4.csproj
+++ b/Source/Examples/Silverlight/ExportDemo/ExportDemo_SL4.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5C307156-E173-425B-8FC7-4B5CB63C7980}</ProjectGuid>
+    <ProjectGuid>{66F2A02F-EF7B-4EBF-AD1B-6506BF7BD983}</ProjectGuid>
     <ProjectTypeGuids>{A1591282-1198-4647-A2B1-27E5FF5F6F3B};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -43,7 +43,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>Bin\Debug</OutputPath>
+    <OutputPath>Bin\Debug\SL4\</OutputPath>
+    <IntermediateOutputPath>obj\Debug\SL4\</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE;SILVERLIGHT</DefineConstants>
     <NoStdLib>true</NoStdLib>
     <NoConfig>true</NoConfig>
@@ -55,6 +56,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\..\..\..\Output\SL4\Examples\Silverlight\ExportDemo\</OutputPath>
+    <IntermediateOutputPath>obj\Release\SL4\</IntermediateOutputPath>
     <DefineConstants>TRACE;SILVERLIGHT</DefineConstants>
     <NoStdLib>true</NoStdLib>
     <NoConfig>true</NoConfig>
@@ -119,7 +121,7 @@
       <Name>OxyPlot.Pdf_SL4</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\OxyPlot.Silverlight\OxyPlot.Silverlight_SL4.csproj">
-      <Project>{2eb36333-58c3-47fd-b01f-c1c3faf1888a}</Project>
+      <Project>{388db184-b394-4f9d-8937-aae920caad70}</Project>
       <Name>OxyPlot.Silverlight_SL4</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\OxyPlot\OxyPlot.csproj">
