--- a/Source/OxyPlot/OxyPlotMT.csproj
+++ b/Source/OxyPlot/OxyPlotMT.csproj
@@ -52,10 +52,11 @@
     <Compile Include="Annotations\Annotation.cs" />
     <Compile Include="Annotations\AnnotationLayer.cs" />
     <Compile Include="Annotations\ArrowAnnotation.cs" />
+    <Compile Include="Annotations\EllipseAnnotation.cs" />
     <Compile Include="Annotations\ImageAnnotation.cs" />
     <Compile Include="Annotations\TileMapAnnotation.cs" />
     <Compile Include="Foundation\PlotLength.cs" />
-    <Compile Include="Foundation\PlotUnitType.cs" />
+    <Compile Include="Foundation\PlotLengthUnit.cs" />
     <Compile Include="Annotations\RectangleAnnotation.cs" />
     <Compile Include="Annotations\TextAnnotation.cs" />
     <Compile Include="Annotations\PolygonAnnotation.cs" />
@@ -80,12 +81,11 @@
     <Compile Include="Foundation\CodeGenerator\CodeGenerator.cs" />
     <Compile Include="Foundation\CodeGenerator\CodeGeneratorStringExtensions.cs" />
     <Compile Include="Foundation\CodeGenerator\ICodeGenerating.cs" />
-    <Compile Include="Foundation\DataPointConverter.cs" />
     <Compile Include="Foundation\ListFiller.cs" />
-    <Compile Include="Foundation\OxyColorConverter.cs" />
     <Compile Include="Foundation\OxyPalette.cs" />
     <Compile Include="Foundation\OxyPalettes.cs" />
     <Compile Include="Foundation\ScreenVector.cs" />
+    <Compile Include="Foundation\StreamExtensions.cs" />
     <Compile Include="Foundation\StringHelper.cs" />
     <Compile Include="Foundation\DoubleExtensions.cs" />
     <Compile Include="Foundation\FractionHelper.cs" />
@@ -142,7 +142,7 @@
     <Compile Include="Render\AxisRendererBase.cs" />
     <Compile Include="Foundation\CohenSutherlandClipping.cs" />
     <Compile Include="Render\AngleAxisRenderer.cs" />
-    <Compile Include="Foundation\HorizontalTextAlign.cs" />
+    <Compile Include="Foundation\HorizontalAlignment.cs" />
     <Compile Include="Render\MagnitudeAxisRenderer.cs" />
     <Compile Include="Render\MathRenderingExtensions.cs" />
     <Compile Include="Foundation\OxyPenLineJoin.cs" />
@@ -150,7 +150,7 @@
     <Compile Include="Render\RenderingExtensions.cs" />
     <Compile Include="Render\HorizontalAndVerticalAxisRenderer.cs" />
     <Compile Include="Render\IRenderContext.cs" />
-    <Compile Include="Foundation\VerticalTextAlign.cs" />
+    <Compile Include="Foundation\VerticalAlignment.cs" />
     <Compile Include="Reporting\ReportWriters\WikiReportWriter.cs" />
     <Compile Include="Reporting\ReportWriters\HtmlReportWriter.cs" />
     <Compile Include="Reporting\ReportWriters\IReportWriter.cs" />
@@ -206,7 +206,6 @@
     <Compile Include="Series\PieSeries.cs" />
     <Compile Include="Series\FunctionSeries.cs" />
     <Compile Include="Series\PieSlice.cs" />
-    <Compile Include="Svg\NativeMethods.cs" />
     <Compile Include="Svg\SvgRenderContext.cs" />
     <Compile Include="Svg\SvgWriter.cs" />
     <Compile Include="Foundation\OxyColor.cs" />
