--- a/Source/OxyPlot.MonoForAndroid/OxyPlot.MonoForAndroid.csproj
+++ b/Source/OxyPlot.MonoForAndroid/OxyPlot.MonoForAndroid.csproj
@@ -3,8 +3,6 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{E965BA32-9561-4E2A-ADB0-19487B25A939}</ProjectGuid>
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
@@ -52,7 +50,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\OxyPlot\OxyPlotMA.csproj">
+    <ProjectReference Include="..\OxyPlot\OxyPlotMfA.csproj">
       <Project>{08A91765-2C9D-4D2B-B56D-FAE62AB204CC}</Project>
       <Name>OxyPlotMA</Name>
     </ProjectReference>
