--- a/Source/OxyPlot/OxyPlotMfA.csproj
+++ b/Source/OxyPlot/OxyPlotMfA.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Foundation\ListFiller.cs" />
     <Compile Include="Foundation\OxyPalette.cs" />
     <Compile Include="Foundation\OxyPalettes.cs" />
+    <Compile Include="Foundation\PngEncoder.cs" />
     <Compile Include="Foundation\ScreenVector.cs" />
     <Compile Include="Foundation\StreamExtensions.cs" />
     <Compile Include="Foundation\StringHelper.cs" />
@@ -220,13 +221,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Foundation\XmlWriterBase.cs" />
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
     <None Include="ClassDiagrams\Series.cd" />
     <None Include="ClassDiagrams\PlotModel.cd" />
     <None Include="ClassDiagrams\Reporting.cd" />
     <None Include="OxyPlot.snk" />
   </ItemGroup>
+  <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
