Compatibility updates with changes to API. Updated OxyPlotMT project as was not recognised as a MonoTouch project. Removed signing.

--- a/Source/OxyPlot/OxyPlotMT.csproj
+++ b/Source/OxyPlot/OxyPlotMT.csproj
@@ -11,13 +11,12 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OxyPlot</RootNamespace>
     <AssemblyName>OxyPlot</AssemblyName>
-    <FileAlignment>512</FileAlignment>
     <!--<TargetFrameworkProfile>Client</TargetFrameworkProfile>-->
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
+    <DebugSymbols>True</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>False</Optimize>
     <OutputPath>bin\Debug\MT\</OutputPath>
     <IntermediateOutputPath>obj\Debug\MT\</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE;MONO</DefineConstants>
@@ -26,19 +25,13 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>True</Optimize>
     <OutputPath>..\..\Output\MT\</OutputPath>
     <IntermediateOutputPath>obj\Release\MT\</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\..\Output\MT\OxyPlot.XML</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>OxyPlot.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
