--- a/Source/OxyPlot.Metro/OxyPlot.Metro.csproj
+++ b/Source/OxyPlot.Metro/OxyPlot.Metro.csproj
@@ -58,6 +58,7 @@
       <Name>OxyPlot</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v11.0\Microsoft.Windows.UI.Xaml.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
