Changed description in nuspecs

--- a/Packages/OxyPlot.Core/OxyPlot.Core.nuspec
+++ b/Packages/OxyPlot.Core/OxyPlot.Core.nuspec
@@ -8,7 +8,7 @@
     <projectUrl>http://oxyplot.codeplex.com/</projectUrl>
     <iconUrl>http://www.objo.net/codeplex/icons/oxyplot.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>OxyPlot is an open source .NET plotting library. This core package is included in the other OxyPlot packages.</description>
+    <description>OxyPlot is an open source plotting library for .NET. This core package is included in the other OxyPlot packages.</description>
     <tags>plotting plot charting chart</tags>
   </metadata>
 </package>
