--- a/Packages/OxyPlot.OpenXml/OxyPlot.OpenXml.nuspec
+++ b/Packages/OxyPlot.OpenXml/OxyPlot.OpenXml.nuspec
@@ -8,7 +8,7 @@
     <projectUrl>http://oxyplot.codeplex.com/</projectUrl>
     <iconUrl>http://www.objo.net/codeplex/icons/oxyplot.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>OxyPlot is an open source .NET plotting library. This package contains the OpenXML (.docx) export extensions.</description>
+    <description>OxyPlot is an open source plotting library for .NET. This package contains the OpenXML (.docx) export extensions.</description>
     <tags>openxml plotting plot charting chart</tags>
     <dependencies>
       <dependency id="OxyPlot.Core" version="2013.1" />
