--- a/Packages/OxyPlot.Pdf/OxyPlot.Pdf.nuspec
+++ b/Packages/OxyPlot.Pdf/OxyPlot.Pdf.nuspec
@@ -8,7 +8,7 @@
     <projectUrl>http://oxyplot.codeplex.com/</projectUrl>
     <iconUrl>http://www.objo.net/codeplex/icons/oxyplot.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>OxyPlot is an open source .NET plotting library. This package contains the .pdf export extensions for Silverlight, .NET 4.0 and .NET 4.5.</description>
+    <description>OxyPlot is an open source plotting library for .NET. This package contains the .pdf export extensions for Silverlight, .NET 4.0 and .NET 4.5.</description>
     <tags>pdf plotting plot charting chart</tags>
     <dependencies>
       <dependency id="OxyPlot.Core" version="2013.1" />
