--- a/Source/Examples/WindowsForms/ExampleBrowser/ExampleBrowser_NET40.csproj
+++ b/Source/Examples/WindowsForms/ExampleBrowser/ExampleBrowser_NET40.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>..\..\..\..\Icons\OxyPlot.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
