--- a/Source/OxyPlot/OxyPlotMT.csproj
+++ b/Source/OxyPlot/OxyPlotMT.csproj
@@ -44,9 +44,14 @@
     </Compile>
     <Compile Include="Annotations\Annotation.cs" />
     <Compile Include="Annotations\AnnotationLayer.cs" />
+    <Compile Include="Annotations\AnnotationTextOrientation.cs" />
     <Compile Include="Annotations\ArrowAnnotation.cs" />
     <Compile Include="Annotations\EllipseAnnotation.cs" />
+    <Compile Include="Annotations\FunctionAnnotation.cs" />
+    <Compile Include="Annotations\FunctionAnnotationType.cs" />
     <Compile Include="Annotations\ImageAnnotation.cs" />
+    <Compile Include="Annotations\PathAnnotation.cs" />
+    <Compile Include="Annotations\PolylineAnnotation.cs" />
     <Compile Include="Annotations\TileMapAnnotation.cs" />
     <Compile Include="Axes\ColorAxis.cs" />
     <Compile Include="Axes\RangeColorAxis.cs" />
@@ -103,6 +108,8 @@
     <Compile Include="NamespaceDoc.cs" />
     <Compile Include="PlotModel\HitTestResult.cs" />
     <Compile Include="Foundation\OxyImage.cs" />
+    <Compile Include="PlotModel\Selection.cs" />
+    <Compile Include="PlotModel\SelectionMode.cs" />
     <Compile Include="PlotModel\TrackerEventArgs.cs" />
     <Compile Include="Reporting\NamespaceDoc.cs" />
     <Compile Include="Series\BarSeries\BarItem.cs" />
