--- a/Source/Examples/WPF/WpfExamples/WpfExamples_NET40.csproj
+++ b/Source/Examples/WPF/WpfExamples/WpfExamples_NET40.csproj
@@ -96,6 +96,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Examples\OverlayDemo\MainWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Examples\TaskDemo\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -219,6 +223,9 @@
     <Compile Include="Examples\ColumnSeriesDemo\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Examples\OverlayDemo\MainWindow.xaml.cs">
+      <DependentUpon>MainWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Examples\TaskDemo\MainViewModel.cs" />
     <Compile Include="Examples\TaskDemo\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -308,6 +315,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Resource Include="Images\OverlayDemo.png" />
     <Resource Include="Images\ColorBindingDemo.png" />
     <Resource Include="Images\ColumnSeriesDemo.png" />
     <Resource Include="Images\TaskDemo.png" />
