--- a/Source/OxyPlot.Wpf/OxyPlot.Wpf.csproj
+++ b/Source/OxyPlot.Wpf/OxyPlot.Wpf.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Helpers\WeakEvents\WeakEventListenerT.cs" />
     <Compile Include="Helpers\WeakEvents\WeakEventManagerBaseT.cs" />
     <Compile Include="NamespaceDoc.cs" />
+    <Compile Include="Plot.TouchEvents.cs" />
     <Compile Include="RenderingControl.cs" />
     <Compile Include="Series\BarSeries\ColumnSeries.cs" />
     <Compile Include="Series\BarSeries\CategorizedSeries.cs" />
